# Bet_Tracker

./: .gitignore  BetTracker.bat  Betano_sports  CHANGELOG_OVERLAY_MVP.md  Instalator-BetTracker-Overlay.bat  README.md  Restart-a-spust-vse.bat  Ticket_Mapping  betano_html.txt  git-push-overlay-mvp.bat  run-backend.bat  run-frontend.bat  run-overlay.bat  start.bat  test_api.py  test_scrape.js  v01.md
SofaScore FAV/: README.md  background.js  content.js  manifest.json  options.html  options.js
backend/: .env.example  .sofascore_auth.json  README.md  alembic.ini  create_missing_table.py  init_db.py  requirements.txt  wipe_db.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  preview_store.py  seed.py
backend/scripts/: __init__.py  normalize_market_types.py
docker/: docker-compose.yml
docs/: EVENT_DATE_SOURCES.md  FUTURE_EVENTS_PANEL_ANALYSIS_AND_PROPOSAL.md  LIVE_DETECTION_TIPSPORT.md  LIVE_PANEL_ANALYSIS_AND_PROPOSAL.md  OVERLAY_A_DATA_Z_SAZKOVYCH_KANCELARI.md  SOFASCORE_FAVOURITES_SYNC_NAVRH.md  TIPSPORT_EXTENSION_PROBLEM_ANALYSIS.md  TYPY_SAZEK_A_IMPORT.md  ZACATEK_ZAPASU_A_FUTURE_FILTER.md
frontend/: next.config.mjs  package-lock.json  package.json
overlay/: README.md  build.ps1  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/src/: lib.rs  main.rs
tipsport-scraper-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
(+61 files in other folders)
